# openAAS_workshop

./: .gitmodules  CMakeLists.txt  README.md  opcua_interface.c  opcua_interface.h  openaas.xml  openaas_eng.c  update-openaas-vm.sh  update_scripts.sh
external_generated/: open62541.c  open62541.h  ua_openaas_generated.c  ua_openaas_generated.h  ua_openaas_generated_encoding_binary.h  ua_openaas_generated_handling.h
libreoffice/: Capitalise.py  CreateLCE1.py  CreatePVS.py  README.md  TypeConversion.py  aas_client.ods  opcua_interface.py  opcua_interface.py~
models/: Custom.Opc.Ua.AssetAdministrationShell.bsd  README.md  aas.csv  aas.xml  aas_nodeset.xml  aas_selected_types.txt
models/aas/: openaas.xml
openaas_datatypes/: NodeIds_openaas.csv  NodeIds_openaas.csv_1  datatypes_openaas.txt
python/: README.MD  setup.py
python/aas/: __init__.py  aas.py
